# akatsuki-git

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
backend/: Cargo.toml
backend/src/: error.rs  git_analyzer.rs  handlers.rs  main.rs  paths.rs  protocol.rs  ranks.rs  rpc.rs  storage.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
extension/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/scripts/: copy-protocol.mjs  package.mjs
extension/src/: backendClient.ts  dashboard.ts  extension.ts  gitWatcher.ts  logger.ts  messages.ts  onboarding.ts  statusBar.ts  util.ts
shared/: Cargo.toml
shared/src/: lib.rs
shared/ts/: protocol.ts
