[package]
name = "akatsuki-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "akatsuki-backend"
path = "src/main.rs"

[dependencies]
akatsuki-protocol = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = { version = "0.18", default-features = false }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
